--- a/package.json
+++ b/package.json
@@ -1,18 +1,11 @@
 {
-  "name": "backbone-node-bookstore",
+  "name": "backbone-library",
   "version": "0.0.1",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "description": "A simple library application using Backbone",
   "dependencies": {
-    "body-parser": "~1.9.1",
     "express": "~3.1.0",
+    "path": "~0.4.9",
     "mongoose": "~3.5.5",
-    "morgan": "^1.5.2",
-    "path": "~0.4.9"
+    "body-parser": "~1.9.1"
   }
 }
